--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
     "name": "teacher-frontend",
     "version": "1.0.0",
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.19",
+        "@mui/material": "^5.14.20",
+        "firebase": "^11.10.0",
+        "framer-motion": "^10.16.16",
         "@react-pdf-viewer/core": "^3.12.0",
         "@react-pdf-viewer/default-layout": "^3.12.0",
         "axios": "^1.5.0",
@@ -10,7 +16,7 @@
         "react-dom": "^18.0.0",
         "react-pdf": "^9.2.1",
         "react-router-dom": "^7.2.0",
-        "react-scripts": "5.0.1"
+        "react-scripts": "^5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
